--- a/上課/adoDotNet開發/WindowsFormsApp3/WindowsFormsApp3/WindowsFormsApp3.csproj
+++ b/上課/adoDotNet開發/WindowsFormsApp3/WindowsFormsApp3/WindowsFormsApp3.csproj
@@ -52,6 +52,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="mydbDataSet.cs">
+      <DependentUpon>mydbDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="mydbDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
