--- a/上課/專題/drink shop/drink shop/drink shop.csproj
+++ b/上課/專題/drink shop/drink shop/drink shop.csproj
@@ -69,6 +69,12 @@
     <Compile Include="GlobalVar.cs" />
     <Compile Include="IShop.cs" />
     <Compile Include="linksql.cs" />
+    <Compile Include="ModifyUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModifyUser.Designer.cs">
+      <DependentUpon>ModifyUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="newUser.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +94,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form3.resx">
       <DependentUpon>Form3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModifyUser.resx">
+      <DependentUpon>ModifyUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="newUser.resx">
       <DependentUpon>newUser.cs</DependentUpon>
